--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/laboweb_final?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=CST
+spring.datasource.username=root
+spring.datasource.password=35aoZf5Y
+spring.jpa.open-in-view=true
+logging.level.root=WARN
